# payme

./: CHANGELOG.md  LICENSE  README.md  flake.nix  payme.cabal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1d49vqvzrcx28yjj0rrwxr2dfy15rkp6-source  awyhlpjr5ccdh5w2j6qwyv27b1cak087-source  smydaj3wh4ajv2yp2h86p57vi7rg30bb-source  y4098fj93fr699fy74qmr198jb2rkdfm-source
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.5/: package.cache  payme-0.1.0.0-inplace.conf
dist-newstyle/packagedb/ghc-9.6.6/: package.cache  payme-0.1.0.0-inplace.conf
src/: DB.hs  Ledger.hs  Money.hs
