cabal-version:      3.0
name:               payme
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             rkc
maintainer:         kumarcrishikesh@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared
    ghc-options: -Wall
    build-depends:    base ^>=4.18.2.1
    default-language: GHC2021
    default-extensions: 
        DerivingStrategies, 
        OverloadedRecordDot, 
        DuplicateRecordFields,
        OverloadedStrings

library
    import: shared
    hs-source-dirs: src
    exposed-modules: 
        Ledger
        Money
        DB
    build-depends: time ^>= 1.12
                 , uuid ^>= 1.3.15
                 , esqueleto ^>= 3.5.11.2
                 , persistent ^>= 2.14.6.1

                
executable payme
    import:           shared
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    hs-source-dirs: app
    build-depends: payme
                 , time ^>= 1.12
                 , uuid ^>= 1.3.15
                 , esqueleto ^>= 3.5.11.2
                 , persistent-sqlite ^>= 2.13.3.0
                 , persistent ^>= 2.14.6.1
